--- a/one.css
+++ b/one.css
@@ -1,8 +1,13 @@
+html,body {
+    margin:0;
+    padding:0;
+  }
+
 .calculator {
-    background-color: white;
+    background-color:blanchedalmond;
     height: 100vh;
     width: 100vw;   
-    border: 2px solid red ;
+    /* border: 2px solid red ; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -12,6 +17,8 @@
 .container {
     height: 80vh;
     width: 52vh;
+    padding: 5px;
+    background-color: black;
     display: flex;
     flex-direction:column;
     justify-content: flex-start;
@@ -77,6 +84,8 @@
 }
 
 *{
-    font-size: 25px;
-    font-weight: 800;
+    font: monospace;
+    font-size: 30px;
+    /* font-weight: ; */
 }
+
