--- a/one.css
+++ b/one.css
@@ -21,6 +21,7 @@ html,body {
     width: 52vh;
     padding: 5px;
     background-color: black;
+    border-radius: 15px;
     display: flex;
     flex-direction:column;
     justify-content: flex-start;
@@ -36,7 +37,7 @@ html,body {
 }
 
 .buttons {
-    height: 80vh;
+    height: 57vh;
     width: inherit;
     /* border: 0.5px solid red;     */
 }
@@ -93,8 +94,8 @@ html,body {
 .screen-box {
     height: 95%;
     width: 100%;
-    border: 1px solid black;
-    border-radius: 3px;
+    border: 1px solid white;
+    border-radius: 15px;
     background-color: black;
 }
 
