--- a/one.css
+++ b/one.css
@@ -106,6 +106,7 @@ html,body {
     font-family: "Courier New", Courier, monospace;
     text-align: right;
     padding: 20px 5px;
+    overflow: hidden; 
   }
 
 /* button animation */
